--- a/frontend/app/assets/scss/reset.scss
+++ b/frontend/app/assets/scss/reset.scss
@@ -1,6 +1,7 @@
 body {
     font-family: var(--font-main);
-    color: #000;
+    color: var(--black);
+    font-weight: 400;
     line-height: 130%;
 }
 
@@ -9,6 +10,10 @@ body {
     padding: 0;
     margin: 0;
     outline: none;
+}
+
+h1, h2, h3, h4 {
+    font-weight: inherit;
 }
 
 input {
