test: validation on create book testing

--- a/frontend/app/assets/scss/runtime/variables.scss
+++ b/frontend/app/assets/scss/runtime/variables.scss
@@ -8,6 +8,7 @@ $tr: .3s;
 	--gray-04: #d3d7ea;
 	--gray-05: #e8ecf3;
 	--gray-06: #f5f7fa;
+    --green: #47C832;
 	--white: #fff;
 	--color: #9b2d30;
 	--color-hover: #B8373B;
