--- a/backend/system/templates/admin/base_site.html
+++ b/backend/system/templates/admin/base_site.html
@@ -2,6 +2,6 @@
 
 {% block extrahead %}
     {{ block.super }}
-    <link rel="stylesheet" type="text/css" href="/admin/styles/main.css">
+    <link rel="stylesheet" type="text/css" href="/admin/style/main.css">
     <script type="text/javascript" src="/admin/script/main.js"></script>
 {% endblock %}
