--- a/frontend/app/assets/scss/runtime/variables.scss
+++ b/frontend/app/assets/scss/runtime/variables.scss
@@ -1,21 +1,20 @@
 $main-clr: #f00;
-$tr: .3s;
+$tr: 0.3s;
 :root {
     --black: #1b1c1e;
-	--gray-01: #424554;
-	--gray-02: #5f6377;
-	--gray-03: #9095ac;
-	--gray-04: #d3d7ea;
-	--gray-05: #e8ecf3;
-	--gray-06: #f5f7fa;
-    --green: #47C832;
-	--white: #fff;
-	--color: #9b2d30;
-	--color-hover: #B8373B;
+    --gray-01: #424554;
+    --gray-02: #5f6377;
+    --gray-03: #9095ac;
+    --gray-04: #d3d7ea;
+    --gray-05: #e8ecf3;
+    --gray-06: #f5f7fa;
+    --green: #47c832;
+    --white: #fff;
+    --color: #9b2d30;
+    --color-hover: #b8373b;
 
     --font-main: 'Golos Text';
 
     --container-width: 1700px;
     --container-padding-x: 20px;
 }
-
