build: picture page maked

--- a/frontend/app/assets/scss/runtime/variables.scss
+++ b/frontend/app/assets/scss/runtime/variables.scss
@@ -1,17 +1,17 @@
 $main-clr: #f00;
 $tr: 0.3s;
 :root {
-    --black: #1b1c1e;
-    --gray-01: #424554;
-    --gray-02: #5f6377;
-    --gray-03: #9095ac;
-    --gray-04: #d3d7ea;
-    --gray-05: #e8ecf3;
-    --gray-06: #f5f7fa;
-    --green: #47c832;
-    --white: #fff;
-    --color: #9b2d30;
-    --color-hover: #b8373b;
+    --black: #2a2620;
+    --gray-01: #544e47;
+    --gray-02: #736b62;
+    --gray-03: #9c9389;
+    --gray-04: #d0c8bd;
+    --gray-05: #f0eae4;
+    --gray-06: #fcf9f5;
+    --green: #8a9f6e;
+    --white: #fffdfa;
+    --color: #b35a43;
+    --color-hover: #d46e52;
 
     --font-main: 'Golos Text';
 
